# pushlog

./: CHANGELOG.md  LICENSE  README.md  TODO.md  config.yaml  default.nix  eval.nix  example_entry.txt  flake.nix  module.nix  prompt.txt  pushlog  pushlog_lib.py  pushlog_test  pyproject.toml  pytest.ini  setup.py
.github/: dependabot.yml
.github/workflows/: nix-build.yml  pylint.yml  pytest.yml
tests/: README.md  test_config.py  test_daemon.py  test_history.py  test_notifications.py  test_pattern_matching.py
tests/fixtures/: test_config.yaml
